--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-day-picker": "^9.2.1",
     "react-dom": "^18"
   },
   "devDependencies": {
