--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "date-fns": "^4.1.0",
     "next": "14.2.15",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-day-picker": "^9.2.1",
     "react-dom": "^18"
